<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f2f2f2"
    tools:context=".I011Activity">


    <LinearLayout
        android:id="@+id/i011_llt_account"
        android:layout_width="332dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        android:background="#ffffff"

        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="22dp"
            android:src="@drawable/icon_name" />

        <EditText
            android:id="@+id/i011_edt_account"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/i011_account"
            android:maxLength="11"
            android:singleLine="true"
            android:textColorHint="#bbbbbb"
            android:textColor="#000000"

            />
    </LinearLayout>


    <TextView
        android:layout_width="332dp"
        android:layout_height="2dp"
        android:layout_below="@id/i011_llt_account"
        android:layout_centerHorizontal="true"
        android:background="#bbbbbb" />

    <LinearLayout
        android:id="@+id/i011_llt_password"
        android:layout_width="332dp"
        android:layout_height="50dp"
        android:layout_below="@id/i011_llt_account"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="2dp"
        android:background="#ffffff"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="22dp"
            android:src="@drawable/icon_lock" />

        <EditText
            android:id="@+id/i011_edt_password"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:password="false"
            android:hint="@string/i011_password"
            android:textColor="#000000"
            android:textColorHint="#bbbbbb" />
    </LinearLayout>

    <TextView
        android:id="@+id/i011_tv_forget_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@id/i011_llt_password"
        android:layout_below="@id/i011_llt_password"
        android:layout_marginTop="80dp"
        android:text="@string/i011_forget_password"
        android:textColor="#253049"
        android:textSize="16sp" />

    <Button
        android:id="@+id/i011_btn_login"
        android:layout_width="332dp"
        android:layout_height="48dp"
        android:layout_below="@id/i011_llt_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="#95c040"
        android:text="Login"
        android:textColor="#ffffff"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/i011_tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/i011_llt_password"
        android:layout_below="@id/i011_llt_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:text="Register"
        android:textColor="#4c5966"
        android:textSize="16sp" />

    <ImageView
        android:id="@+id/i011_img_icon"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:src="@drawable/icon_logo" />


    <LinearLayout
        android:id="@+id/i011_llt_company"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:layout_marginTop="100dp"
        android:layout_below="@id/i011_tv_register"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:src="@drawable/icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="4dp"
            android:text="@string/company_name"
            android:textColor="#253049"
            android:textSize="16sp"

            />
    </LinearLayout>

    <TextView
        android:id="@+id/text_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/i011_llt_company"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
       />
    
</RelativeLayout>
